# Traveloop

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  seed_community_trips.py  test_phase2.py  todo
app/: __init__.py
app/models/: __init__.py  activity.py  budget.py  interaction.py  note.py  packing.py  share.py  stop.py  trip.py  user.py
app/routes/: __init__.py  admin_api.py  auth.py  community_api.py  dashboard.py  itinerary_api.py  locations.py  share_api.py  trip_api.py
app/services/: dashboard_service.py  location_service.py  routing_service.py  share_service.py  trip_service.py  weather_service.py
app/static/css/: globals.css
app/static/js/: accessibility.js  api-client.js  app.js  locations.js  trip.js
app/templates/: base.html
app/templates/components/: navbar.html  sidebar.html
app/templates/errors/: 404.html
app/templates/pages/: admin.html  community.html  dashboard.html  home.html  profile.html  settings.html  shared_trip.html  trip_detail.html
app/templates/pages/auth/: admin_login.html  signup.html
app/utils/: rate_limiter.py
migrations/versions/: c36b5aceb06b_add_is_admin_to_user.py  ffb7745f8107_add_is_public_to_trip.py
tests/: test_phase9_comprehensive.py
